Escrevemendo meta element

--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <title>Biblioteca HTML</title>
+  <title>Biblioteca Frontend</title>
+  <meta charset="UTF-8" />
+  <meta name="keywords" content="HTML, CSS, JavaScript" />
+  <meta name="description" content="Biblioteca Frontend" />
+  <meta name="author" content="Luiz Filipe" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="CSS/style.css"
+  <script src="JavaScript/script.js"></script>
 </head>
 <body>
-
+  <header><h1>Biblioteca Frontend</h1></header>
 </body>
 </html>
