Adicionando página de comentários

--- a/HTML/comments.html
+++ b/HTML/comments.html
@@ -9,6 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body>
-
+  <!-Página de Comentários->
+  <a href="../index.html">Página principal</a>
+  <!-Os comentarios HTML são informações, dicas, avisos, conselhos,
+  que só podem ser vistos dentro do código fonte, ou seja, 
+  não aparecem no navegador para leitores->
 </body>
 </html>
