--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
   <header><h1>Biblioteca Frontend</h1></header>
-  <a href="HTML/comment.html">Comentarios HTML</a>
+  <a href="HTML/comments.html">Comentarios HTML</a>
 </body>
 </html>
