--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <body>
   <header><h1>Biblioteca Frontend</h1></header>
   <a href="HTML/comments.html">Comentarios HTML</a>
+  <a href="HTML/doctype.html">DOCTYPEs</a>
 </body>
 </html>
